--- a/client/signup/steps/domains/style.scss
+++ b/client/signup/steps/domains/style.scss
@@ -236,10 +236,16 @@ body.is-section-stepper .domains__step-content,
 	&.domains {
 		&.step-route {
 			padding: 48px 0 0;
+			@include break-mobile {
+				padding: 48px 12px 0 12px;
+			}
 			.step-container {
 				.step-container__header {
 					margin: 36px 0 24px 0;
 					@include break-mobile {
+						margin: 24px 20px;
+					}
+					@include break-xlarge {
 						margin: 48px 0 40px;
 					}
 				}
@@ -247,6 +253,9 @@ body.is-section-stepper .domains__step-content,
 			.formatted-header__title {
 				font-size: 2rem;
 				@include break-mobile {
+					font-size: 2.25rem;
+				}
+				@include break-xlarge {
 					font-size: 2.75rem;
 				}
 			}
